# gh-release-notify

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml  docker-compose.yml  release.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-07-04-gh-release-notify.md  2026-07-04-pangolin-notify.md  2026-07-05-release-workflow.md  2026-07-10-cron-schedule.md
docs/superpowers/specs/: 2026-07-04-gh-release-notify-design.md  2026-07-04-pangolin-notify-design.md  2026-07-05-release-workflow-design.md  2026-07-10-cron-schedule-design.md
src/: config.rs  github.rs  main.rs  notify.rs  scheduler.rs  state.rs
